# lucyna_api

./: .env.example  .gitignore  README.md  lucyna.db  package-lock.json  pyproject.toml  upload_testing.py
app/: api_main.py  artist.py  database.py  s3_utils.py  utils.py
app/routers/: art.py  base.py  border.py  bot.py  character.py  series.py
